[workspace]
resolver = "2"
members = [
    "crates/relyo-core",
    "crates/relyo-dag",
    "crates/relyo-consensus",
    "crates/relyo-network",
    "crates/relyo-node",
    "crates/relyo-wallet",
    "crates/relyo-explorer",
    "crates/relyo-sdk", "gen_id",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Relyo Foundation <relyocore@gmail.com>"]
license = "MIT"
repository = "https://github.com/relyocore/relyo"
description = "OpenGraph Ledger - A DAG-based decentralized payment network"

[workspace.dependencies]
# Internal crates
relyo-core = { path = "crates/relyo-core" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env", "unicode"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core", "batch"] }
blake3 = "1.5"
sha3 = "0.10"
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Encoding
hex = "0.4"
bs58 = "0.5"
base64 = "0.22"

# Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "gossipsub",
    "kad",
    "request-response",
    "noise",
    "tcp",
    "quic",
    "yamux",
    "macros",
    "identify",
    "ping",
    "cbor",
    "ed25519",
] }

# Storage (pure Rust - no C dependencies)
redb = "2.4"

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Web framework (explorer)
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Config
toml = "0.8"

# Byte utilities
bytes = "1.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
