[package]
name = "relyo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core primitives, cryptography, Merkle trees, and types for the Relyo payment network"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rand = { workspace = true }

[build-dependencies]
blake3 = { workspace = true }
