[package]
name = "relyo-dag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DAG (Directed Acyclic Graph) ledger with conflict detection and persistence for Relyo"

[dependencies]
relyo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
redb = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rand = { workspace = true }
tempfile = "3.14"
