[package]
name = "relyo-explorer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Network explorer API and DAG visualization for the Relyo payment network"

[dependencies]
relyo-core = { workspace = true }
relyo-dag = { path = "../relyo-dag" }
relyo-consensus = { path = "../relyo-consensus" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
