[package]
name = "relyo-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "libp2p-based peer-to-peer networking for the Relyo payment network"

[dependencies]
relyo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
