[package]
name = "relyo-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Full node implementation for the Relyo payment network"

[[bin]]
name = "relyo-node"
path = "src/main.rs"

[dependencies]
relyo-core = { workspace = true }
relyo-dag = { path = "../relyo-dag" }
relyo-consensus = { path = "../relyo-consensus" }
relyo-network = { path = "../relyo-network" }
relyo-explorer = { path = "../relyo-explorer" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
futures = "0.3"
axum = { workspace = true }
tower-http = { workspace = true }

blake3 = { workspace = true }
redb.workspace = true

[build-dependencies]
blake3 = { workspace = true }
relyo-core = { path = "../relyo-core" }

