[package]
name = "relyo-wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI wallet and key management for the Relyo payment network"

[[bin]]
name = "relyo-wallet"
path = "src/main.rs"

[dependencies]
relyo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.14"
